# Open-Agent

./: .gitignore  README.md  cli_coder.py  opencode.json  pyproject.toml
examples/: coder_example.py  example.py  test_long_task.py  test_sequential_thinking.py  test_server.py  test_sse_server.py
openagent/: __init__.py  coder.py  mcp.py
openagent/core/: agent.py  bash_manager.py  display.py  logging.py  retry.py  session.py  skill_manager.py  task_manager.py  token_counter.py  tool.py  types.py
openagent/provider/: __init__.py  anthropic.py  base.py  converter.py  google.py  ollama.py  openai.py
openagent/tools/: __init__.py  builtin.py
tests/: conftest.py  test_agent.py  test_agent_with_tools.py  test_all_tools.py  test_builtin_tools.py  test_compaction.py  test_ollama_provider.py  test_session.py  test_tool.py  test_tools_simple.py  test_types.py
