[project]
name = "openagent"
version = "0.1.0"
description = "A lightweight agent framework with pluggable LLM providers"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "openai",
    "anthropic",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
google = ["google-genai>=1.0"]
ollama = ["ollama>=0.4"]
all = ["openai>=1.0", "anthropic>=0.40", "google-genai>=1.0", "ollama>=0.4"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
